# geotherm-bot

./: .gitignore  QA_REPORT.md  README.md  REPORT_PRECOMMIT.md  SANITY_CHECK_FAIRNESS.md  bot.py  config.py  dev-requirements.txt  editorial.py  formatter.py  pyproject.toml  requirements.txt  router.py  rss_collector.py  ruff.toml  storage.py  test_score.py
.github/workflows/: ci.yml
scripts/: __init__.py  final_ready_check.py  pipeline_dry_run_report.py  run_scheduler.py  scoring_report.py
src/geotherm_bot/: README.md  __init__.py
src/geotherm_bot/adapters/: __init__.py
src/geotherm_bot/app/: __init__.py  pipeline.py  publish_service.py  query_builder.py  refresh_service.py  region.py  region_profiles.py
src/geotherm_bot/domain/: __init__.py  filtering.py  models.py  rules.py  scoring.py
src/geotherm_bot/ports/: __init__.py  notifier.py  publications_api.py  queue.py  repository.py  topic_registry.py
tests/: __init__.py  test_content_queue_manual.py  test_content_queue_sqlite.py  test_db_schema.py  test_idempotent_refresh.py  test_publish_service.py  test_publish_service_manual.py  test_refresh_service.py  test_refresh_service_manual.py  test_refresh_service_normalize.py  test_refresh_service_normalize_manual.py  test_region_and_query_builder.py  test_region_and_query_builder_manual.py  test_run_once_parsing.py  test_scheduler_env_parsing.py  test_scoring_golden_set.py  test_scoring_invariants.py  test_smoke_integration.py  test_topic_registry_manual.py  test_topic_registry_sqlite.py  test_ttl_manual.py
tests/fixtures/scoring/: accept_balneotherapy.json  (+14 more)
(+11 files in other folders)
